--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "## Database Schema Design",
   "main": "index.js",
+  "engines": {
+    "node": ">=18 <=20"
+  },
+
   "scripts": {
     "sequelize": "sequelize",
     "sequelize-cli": "sequelize-cli",
